--- a/styles/css/ecomsurnegcl.monogram.css
+++ b/styles/css/ecomsurnegcl.monogram.css
@@ -1,10 +1,10 @@
 .box{
+    font-size: 14px;
     display: flex;
     justify-content: left;
     align-items: center;
     gap: 8px;
     white-space: nowrap;
-    font-size: 5;
     color: white;
 }
 
